--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,14 +25,14 @@
                 android:id="@+id/address"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="DHAKA, BD"
+                android:text="@string/Placeholder_City"
                 android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/updated_at"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="20 April 2012, 20:08 PM"
+                android:text="@string/PlaceholderDate"
                 android:textSize="14sp" />
         </LinearLayout>
 
@@ -48,7 +48,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="Clear Sky"
+                android:text="@string/PlaceholderWeather"
                 android:textSize="18sp" />
 
             <TextView
@@ -119,14 +119,14 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Sunrise"
+                        android:text="@string/sunrise"
                         android:textSize="@dimen/tilesDescription" />
 
                     <TextView
                         android:id="@+id/sunrise"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="06:40 AM"
+                        android:text="@string/Placeholder_TileValue"
                         android:textSize="@dimen/tilesValue" />
                 </LinearLayout>
 
@@ -156,14 +156,14 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Sunset"
+                        android:text="@string/sunset"
                         android:textSize="@dimen/tilesDescription" />
 
                     <TextView
                         android:id="@+id/sunset"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="06:40 AM"
+                        android:text="@string/Placeholder_TileValue"
                         android:textSize="@dimen/tilesValue" />
                 </LinearLayout>
 
@@ -193,14 +193,14 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Wind"
+                        android:text="@string/wind"
                         android:textSize="@dimen/tilesDescription" />
 
                     <TextView
                         android:id="@+id/wind"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="06:40 AM"
+                        android:text="@string/Placeholder_TileValue"
                         android:textSize="@dimen/tilesValue" />
                 </LinearLayout>
             </LinearLayout>
@@ -237,14 +237,14 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Pressure"
+                        android:text="@string/pressure"
                         android:textSize="@dimen/tilesDescription" />
 
                     <TextView
                         android:id="@+id/pressure"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="06:40 AM"
+                        android:text="@string/Placeholder_TileValue"
                         android:textSize="@dimen/tilesValue" />
                 </LinearLayout>
 
@@ -274,14 +274,14 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Humidity"
+                        android:text="@string/humidity"
                         android:textSize="@dimen/tilesDescription" />
 
                     <TextView
                         android:id="@+id/humidity"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="00:40 AM"
+                        android:text="@string/Placeholder_TileValue"
                         android:textSize="@dimen/tilesValue" />
                 </LinearLayout>
 
@@ -311,14 +311,14 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Created By"
+                        android:text="@string/created_by"
                         android:textSize="@dimen/tilesDescription" />
 
                     <TextView
                         android:id="@+id/about"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Kaiser Desenv"
+                        android:text="@string/DeveloperName"
                         android:textSize="@dimen/tilesValue" />
                 </LinearLayout>
             </LinearLayout>
@@ -339,6 +339,6 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:visibility="gone"
-        android:text="Something went wrong"/>
+        android:text="@string/ErrorString"/>
 
 </RelativeLayout>
