--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,25 @@
         android:visibility="visible">
 
         <LinearLayout
+            android:layout_width="@dimen/tilesImageSize"
+            android:layout_height="@dimen/tilesImageSize"
+            android:orientation="vertical"
+            android:gravity="center"
+            android:layout_alignParentEnd="true"
+            android:layout_alignBottom="@id/addressContainer"
+            android:layout_alignTop="@id/addressContainer">
+
+            <ImageView
+                android:id="@+id/reloadButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_autorenew_black_24dp"
+                android:tint="@color/tilesImageTint"
+                android:layout_gravity="center" />
+
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/addressContainer"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -24,16 +43,17 @@
             <TextView
                 android:id="@+id/address"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="@string/Placeholder_City"
                 android:textSize="24sp" />
 
             <TextView
                 android:id="@+id/updated_at"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:text="@string/PlaceholderDate"
                 android:textSize="14sp" />
+
         </LinearLayout>
 
         <LinearLayout
