--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -126,7 +126,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
-                            android:text="@string/Placeholder_Temperature" />
+                            android:text="@string/Placeholder_Temperature"
+                            android:textColor="@color/minTempColor"/>
                     </LinearLayout>
                 </LinearLayout>
             </LinearLayout>
