--- a/app/src/main/res/layout/forecast_node.xml
+++ b/app/src/main/res/layout/forecast_node.xml
@@ -4,7 +4,8 @@
     android:layout_width="70dp"
     android:layout_height="100dp"
     android:layout_gravity="center"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:background="@color/colorPrimaryDark">
 
     <TextView
         android:id="@+id/nodeHour"
