--- a/app/src/main/res/layout/next_days_node.xml
+++ b/app/src/main/res/layout/next_days_node.xml
@@ -6,7 +6,8 @@
     android:baselineAligned="false"
     android:gravity="start"
     android:orientation="horizontal"
-    android:weightSum="2">
+    android:weightSum="2"
+    tools:background="@color/colorPrimaryDark">
 
     <Space
         android:layout_width="10dp"
@@ -74,7 +75,8 @@
                 android:layout_weight="1"
                 android:gravity="center"
                 android:paddingBottom="5dp"
-                android:text="@string/Placeholder_Temperature" />
+                android:text="@string/Placeholder_Temperature"
+                android:textColor="@color/minTempColor"/>
 
         </LinearLayout>
     </LinearLayout>
